--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store-devtools": "^11.1.1",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
