--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@ngrx/router-store": "^11.1.1",
     "@ngrx/store": "^11.1.1",
     "@ngrx/store-devtools": "^11.1.1",
+    "@syncfusion/ej2-angular-dropdowns": "^19.4.47",
+    "@syncfusion/ej2-angular-grids": "^19.4.47",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
+    "ng2-completer": "^9.0.1",
+    "ng2-smart-table": "^1.7.2",
     "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
